--- a/templates/todoItem/todoItem.html
+++ b/templates/todoItem/todoItem.html
@@ -1,5 +1,5 @@
 <tr class="todo__item task task-{{id}} state-{{state}}">
-  <td class="task__select"><input type="checkbox" class="select-item select-{{id}}"></td>
+  <td class="task__select"><input type="checkbox" class="select-item" data-id="{{id}}"></td>
   <td class="task__title"><h6>{{title}}</h6></td>
   <td class="task__description">{{description}}</td>
   <td class="task__state"><span class="badge badge-{{suffix}}">{{htmlState}}</span></td>
