--- a/templates/editItem/state.html
+++ b/templates/editItem/state.html
@@ -1,4 +1,4 @@
-<select class="custom-select edit-state-{{id}}">
+<select class="custom-select edit-state">
   <option value="new">New</option>
   <option value="in-progress">In progress</option>
   <option value="completed">Completed</option>
