--- a/templates/editItem/action.html
+++ b/templates/editItem/action.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-success edit-button-{{id}}">Done</button>
+<button type="button" class="btn btn-success edit-button">Done</button>
