--- a/templates/editItem/description.html
+++ b/templates/editItem/description.html
@@ -1,1 +1,1 @@
-<input type="text" class="form-control edit-description-{{id}}" value="{{description}}">
+<input type="text" class="form-control edit-description" value="{{description}}">
