--- a/templates/editItem/title.html
+++ b/templates/editItem/title.html
@@ -1,1 +1,1 @@
-<input type="text" class="form-control edit-title-{{id}}" value="{{title}}">
+<input type="text" class="form-control edit-title" value="{{title}}">
