--- a/templates/todoItem/todoItem.html
+++ b/templates/todoItem/todoItem.html
@@ -1,10 +1,8 @@
-<tr class="todo__item task task-{{id}} state-{{state}}">
-  <td class="task__select"><input type="checkbox" class="select-item" data-id="{{id}}"></td>
-  <td class="task__title"><h6>{{title}}</h6></td>
-  <td class="task__description">{{description}}</td>
-  <td class="task__state"><span class="badge {{html.className}}">{{html.innerHTML}}</span></td>
-  <td class="task__action action">
-    <button type="button" class="btn btn-warning action__edit" data-id="{{id}}">Edit</button>
-    <button type="button" class="btn btn-danger action__delete" data-id="{{id}}">Delete</button>
-  </td>
-</tr>
+<td class="task__select"><input type="checkbox" class="select-item" data-id="{{id}}"></td>
+<td class="task__title"><h6>{{title}}</h6></td>
+<td class="task__description">{{description}}</td>
+<td class="task__state"><span class="badge {{html.className}}">{{html.innerHTML}}</span></td>
+<td class="task__action action">
+  <button type="button" class="btn btn-warning action__edit action__edit--{{id}}">Edit</button>
+  <button type="button" class="btn btn-danger action__delete action__delete--{{id}}">Delete</button>
+</td>
